--- a/versions.properties
+++ b/versions.properties
@@ -8,21 +8,17 @@
 #### suppress inspection "UnusedProperty" for whole file
 
 version.androidx.activity=1.3.0-rc02
-##            # available=1.3.0-rc02
+##            # available=1.3.0
 
 version.androidx.appcompat=1.4.0-alpha03
 
-version.androidx.compose.foundation=1.0.0-rc02
-##                      # available=1.0.0-rc02
+version.androidx.compose.foundation=1.0.0
 
-version.androidx.compose.material=1.0.0-rc02
-##                    # available=1.0.0-rc02
+version.androidx.compose.material=1.0.0
 
-version.androidx.compose.runtime=1.0.0-rc02
-##                   # available=1.0.0-rc02
+version.androidx.compose.runtime=1.0.0
 
-version.androidx.compose.ui=1.0.0-rc02
-##              # available=1.0.0-rc02
+version.androidx.compose.ui=1.0.0
 
 version.androidx.core=1.6.0
 ##        # available=1.7.0-alpha01
@@ -34,11 +30,13 @@ version.androidx.lifecycle=2.4.0-alpha02
 version.androidx.mediarouter=1.2.4
 
 version.androidx.navigation-compose=2.4.0-alpha04
+##                      # available=2.4.0-alpha05
 
 version.androidx.room=2.3.0
 ##        # available=2.4.0-alpha01
 ##        # available=2.4.0-alpha02
 ##        # available=2.4.0-alpha03
+##        # available=2.4.0-alpha04
 
 version.androidx.test.espresso=3.4.0
 
@@ -50,21 +48,27 @@ version.com.github.masterwok..simple-torrent-android=0.5.0
 
 version.com.google.android.exoplayer..exoplayer-core=2.14.0
 ##                                       # available=2.14.1
+##                                       # available=2.14.2
 
 version.com.google.android.exoplayer..exoplayer-dash=2.14.0
 ##                                       # available=2.14.1
+##                                       # available=2.14.2
 
 version.com.google.android.exoplayer..exoplayer-hls=2.14.0
 ##                                      # available=2.14.1
+##                                      # available=2.14.2
 
 version.com.google.android.exoplayer..exoplayer-ui=2.14.0
 ##                                     # available=2.14.1
+##                                     # available=2.14.2
 
 version.com.google.android.exoplayer..extension-cast=2.14.0
 ##                                       # available=2.14.1
+##                                       # available=2.14.2
 
 version.com.google.android.exoplayer..extension-mediasession=2.14.0
 ##                                               # available=2.14.1
+##                                               # available=2.14.2
 
 version.com.jakewharton.timber..timber=4.7.1
 
@@ -75,6 +79,8 @@ version.google.android.material=1.4.0
 ##                  # available=1.5.0-alpha01
 
 version.google.dagger=2.37
+##        # available=2.38
+##        # available=2.38.1
 
 version.io.arrow-kt..arrow-core=0.13.2
 
@@ -102,8 +108,9 @@ version.kotlin=1.5.10
 ## # available=1.5.20-RC
 ## # available=1.5.20
 ## # available=1.5.21
+## # available=1.5.30-M1
 
-plugin.android=7.1.0-alpha03
+plugin.android=7.1.0-alpha05
 
 plugin.gradle.site=0.6
 
@@ -111,3 +118,4 @@ plugin.org.jmailen.kotlinter=3.4.5
 
 plugin.io.gitlab.arturbosch.detekt=1.17.1
 ##                     # available=1.18.0-RC1
+##                     # available=1.18.0-RC2
