--- a/versions.properties
+++ b/versions.properties
@@ -7,7 +7,7 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
-version.androidx.activity=1.3.0-rc02
+version.androidx.activity=1.3.1
 ##            # available=1.3.0
 ##            # available=1.3.1
 ##            # available=1.4.0-alpha01
@@ -17,7 +17,7 @@ version.androidx.activity=1.3.0-rc02
 ##            # available=1.4.0
 ##            # available=1.5.0-alpha01
 
-version.androidx.appcompat=1.4.0-alpha03
+version.androidx.appcompat=1.4.1
 ##             # available=1.4.0-beta01
 ##             # available=1.4.0-rc01
 ##             # available=1.4.0
