--- a/versions.properties
+++ b/versions.properties
@@ -8,8 +8,6 @@
 #### suppress inspection "UnusedProperty" for whole file
 
 version.androidx.activity=1.3.1
-##            # available=1.3.0
-##            # available=1.3.1
 ##            # available=1.4.0-alpha01
 ##            # available=1.4.0-alpha02
 ##            # available=1.4.0-beta01
@@ -18,20 +16,11 @@ version.androidx.activity=1.3.1
 ##            # available=1.5.0-alpha01
 
 version.androidx.appcompat=1.4.1
-##             # available=1.4.0-beta01
-##             # available=1.4.0-rc01
-##             # available=1.4.0
-##             # available=1.4.1
 
-version.androidx.compose.compiler=1.0.0-rc02
+## unused
+version.androidx.compose.compiler=1.0.5
 
-version.androidx.compose.foundation=1.0.0-rc02
-##                      # available=1.0.0
-##                      # available=1.0.1
-##                      # available=1.0.2
-##                      # available=1.0.3
-##                      # available=1.0.4
-##                      # available=1.0.5
+version.androidx.compose.foundation=1.0.5
 ##                      # available=1.1.0-alpha01
 ##                      # available=1.1.0-alpha02
 ##                      # available=1.1.0-alpha03
@@ -47,13 +36,7 @@ version.androidx.compose.foundation=1.0.0-rc02
 ##                      # available=1.2.0-alpha01
 ##                      # available=1.2.0-alpha02
 
-version.androidx.compose.material=1.0.0-rc02
-##                    # available=1.0.0
-##                    # available=1.0.1
-##                    # available=1.0.2
-##                    # available=1.0.3
-##                    # available=1.0.4
-##                    # available=1.0.5
+version.androidx.compose.material=1.0.5
 ##                    # available=1.1.0-alpha01
 ##                    # available=1.1.0-alpha02
 ##                    # available=1.1.0-alpha03
@@ -69,13 +52,7 @@ version.androidx.compose.material=1.0.0-rc02
 ##                    # available=1.2.0-alpha01
 ##                    # available=1.2.0-alpha02
 
-version.androidx.compose.runtime=1.0.0-rc02
-##                   # available=1.0.0
-##                   # available=1.0.1
-##                   # available=1.0.2
-##                   # available=1.0.3
-##                   # available=1.0.4
-##                   # available=1.0.5
+version.androidx.compose.runtime=1.0.5
 ##                   # available=1.1.0-alpha01
 ##                   # available=1.1.0-alpha02
 ##                   # available=1.1.0-alpha03
@@ -91,13 +68,7 @@ version.androidx.compose.runtime=1.0.0-rc02
 ##                   # available=1.2.0-alpha01
 ##                   # available=1.2.0-alpha02
 
-version.androidx.compose.ui=1.0.0-rc02
-##              # available=1.0.0
-##              # available=1.0.1
-##              # available=1.0.2
-##              # available=1.0.3
-##              # available=1.0.4
-##              # available=1.0.5
+version.androidx.compose.ui=1.0.5
 ##              # available=1.1.0-alpha01
 ##              # available=1.1.0-alpha02
 ##              # available=1.1.0-alpha03
@@ -124,10 +95,7 @@ version.androidx.core=1.6.0
 ##        # available=1.8.0-alpha02
 ##        # available=1.8.0-alpha03
 
-version.androidx.hilt-navigation-compose=1.0.0-alpha03
-##                           # available=1.0.0-beta01
-##                           # available=1.0.0-rc01
-##                           # available=1.0.0
+version.androidx.hilt-navigation-compose=1.0.0
 
 version.androidx.lifecycle=2.4.0-alpha02
 ##             # available=2.4.0-alpha03
@@ -141,17 +109,7 @@ version.androidx.mediarouter=1.2.4
 ##               # available=1.2.6
 ##               # available=1.3.0-alpha01
 
-version.androidx.navigation-compose=2.4.0-alpha04
-##                      # available=2.4.0-alpha05
-##                      # available=2.4.0-alpha06
-##                      # available=2.4.0-alpha07
-##                      # available=2.4.0-alpha08
-##                      # available=2.4.0-alpha09
-##                      # available=2.4.0-alpha10
-##                      # available=2.4.0-beta01
-##                      # available=2.4.0-beta02
-##                      # available=2.4.0-rc01
-##                      # available=2.4.0
+version.androidx.navigation-compose=2.4.0
 ##                      # available=2.5.0-alpha01
 
 version.androidx.room=2.3.0
@@ -310,6 +268,7 @@ version.kotlinx.coroutines=1.5.0
 ##             # available=1.6.0-RC3
 ##             # available=1.6.0
 
+## unused
 version.org.jacoco..org.jacoco.ant=0.8.7
 
 ## unused
@@ -321,16 +280,7 @@ version.okhttp3=4.9.1
 ## unused
 version.retrofit2=2.9.0
 
-version.kotlin=1.5.10
-## # available=1.5.20-M1
-## # available=1.5.20-RC
-## # available=1.5.20
-## # available=1.5.21
-## # available=1.5.30-M1
-## # available=1.5.30-RC
-## # available=1.5.30
-## # available=1.5.31
-## # available=1.5.32
+version.kotlin=1.5.32
 ## # available=1.6.0-M1
 ## # available=1.6.0-RC
 ## # available=1.6.0-RC2
