--- a/versions.properties
+++ b/versions.properties
@@ -84,7 +84,7 @@ version.androidx.compose.ui=1.0.5
 ##              # available=1.2.0-alpha01
 ##              # available=1.2.0-alpha02
 
-version.androidx.core=1.6.0
+version.androidx.core=1.7.0
 ##        # available=1.7.0-alpha01
 ##        # available=1.7.0-alpha02
 ##        # available=1.7.0-beta01
@@ -97,7 +97,7 @@ version.androidx.core=1.6.0
 
 version.androidx.hilt-navigation-compose=1.0.0
 
-version.androidx.lifecycle=2.4.0-alpha02
+version.androidx.lifecycle=2.4.0
 ##             # available=2.4.0-alpha03
 ##             # available=2.4.0-beta01
 ##             # available=2.4.0-rc01
@@ -133,12 +133,6 @@ version.androidx.test.ext.junit=1.1.3
 ##                  # available=1.1.4-alpha01
 ##                  # available=1.1.4-alpha02
 ##                  # available=1.1.4-alpha03
-
-## unused
-version.com.android.support..mediarouter-v7=28.0.0
-
-## unused
-version.com.github.masterwok..simple-torrent-android=0.5.0
 
 version.com.google.android.exoplayer..exoplayer-core=2.14.0
 ##                                       # available=2.14.1
@@ -187,13 +181,6 @@ version.com.google.android.exoplayer..extension-mediasession=2.14.0
 ##                                               # available=2.15.1
 ##                                               # available=2.16.0
 ##                                               # available=2.16.1
-
-## unused
-version.com.jakewharton.timber..timber=4.7.1
-
-## unused
-version.com.prof18.rssparser..rssparser=3.1.4
-##                          # available=3.1.5
 
 version.google.android.material=1.4.0
 ##                  # available=1.5.0-alpha01
